@@ -1,3 +1,14 @@
+New in master
+=============
+
+Features
+--------
+* Add META_GENERATOR_TAG option in conf.py allowing the meta generator
+  to be disabled if needed. (Issue #2628)
+
+Bugfixes
+--------
+
 New in v7.8.3
 =============
 
@@ -11,8 +22,6 @@ Features
 * Sort posts in the following order (most important last): source path
   (A-Z), title (A-Z), date (reverse chronological order), priority
   meta number (descending). (Issue #2627)
-* Add META_GENERATOR_TAG option in conf.py allowing the meta generator 
-  to be disabled if needed. (Issue #2628)
 
 Bugfixes
 --------
